convert to java (only json needs to be fixed - no compile issues)